--- a/codescholar/representation/evaluation.ipynb
+++ b/codescholar/representation/evaluation.ipynb
@@ -2341,7 +2341,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('scholarenv')",
    "language": "python",
    "name": "python3"
   },
@@ -2356,6 +2356,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "62900c96dc58d060f1298311a3b50bf5a6199a2c8bc70f2739ced7f67b849ad3"
+   }
   }
  },
  "nbformat": 4,
