[wip] nl2code eval with codescholar in RAGs

--- a/codescholar/evaluation/emd/plots.ipynb
+++ b/codescholar/evaluation/emd/plots.ipynb
@@ -84,7 +84,7 @@
     "plt.ylabel(\"Number of idioms\")\n",
     "plt.title(\"Number of idioms per API\")\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -132,10 +132,14 @@
     "\n",
     "import regex as re\n",
     "\n",
+    "\n",
     "def parse_emd_log(logs):\n",
     "    emd = {}\n",
     "\n",
-    "    logs = re.findall(r\"========== \\[(.+): (.+)\\] ==========\\nPrograms: (.+)\\nCS idioms: (.+)\\nGPT idioms: (.+)\\nCS EMD: (.+)\\nGPT EMD: (.+)\\n=====================================\", logs)\n",
+    "    logs = re.findall(\n",
+    "        r\"========== \\[(.+): (.+)\\] ==========\\nPrograms: (.+)\\nCS idioms: (.+)\\nGPT idioms: (.+)\\nCS EMD: (.+)\\nGPT EMD: (.+)\\n=====================================\",\n",
+    "        logs,\n",
+    "    )\n",
     "    for log in logs:\n",
     "        lib, api, n_progs, n_cs_idioms, n_gpt_idioms, cs_emd, gpt_emd = log\n",
     "        emd[lib] = emd.get(lib, {})\n",
@@ -161,7 +165,7 @@
    "source": [
     "def plot_emd_lib(lib, emd):\n",
     "    # plt.figure(figsize=(20, 10))\n",
-    "    fig, ax = plt.subplots(layout='constrained')\n",
+    "    fig, ax = plt.subplots(layout=\"constrained\")\n",
     "\n",
     "    # plot cs emd\n",
     "    plt.bar(emd[lib].keys(), [x[0] for x in emd[lib].values()], label=\"CodeScholar\", width=0.25)\n",
@@ -173,8 +177,8 @@
     "    plt.xlabel(\"API\")\n",
     "    plt.ylabel(\"EMD\")\n",
     "    plt.title(f\"EMD of {lib} idioms\")\n",
-    "    plt.legend(loc='upper left', ncols=2)\n",
-    "    plt.show()\n"
+    "    plt.legend(loc=\"upper left\", ncols=2)\n",
+    "    plt.show()"
    ]
   },
   {
